add form section & price-section
add styles

--- a/index.html
+++ b/index.html
@@ -268,34 +268,59 @@
       </section>
       <section class="form-section">
         <div class="container">
-          <h2 class="section-title">Акційні пропозиції</h2>
+          <h2 class="section-title form">Акційні пропозиції</h2>
           <div class="form-section__content">
-            <div>
-              <div class="swiper mySwiper">
-                <div class="swiper-wrapper">
-                  <div class="swiper-slide">
-                    <img src="./assets/images/sliderImg.png" alt="logo" />
-                    <h3>Акція "-40% на пробне заняття з кінезітерапії"</h3>
+            <div class="swiper mySwiper">
+              <div class="swiper-wrapper">
+                <div class="swiper-slide">
+                  <img src="./assets/images/sliderImg.png" alt="logo" />
+                  <div class="slider-text">
+                    <h3 class="slider-title">Акція "-40% на пробне заняття з кінезітерапії"</h3>
                     <p>
                       Маєте чудову нагоду потурбуватись про власне здоров’я за вигідною пропозицією
                       вартістю 680 408 грн.
                     </p>
-                    <a href="#">Дізнатись більше></a>
-                  </div>
-                  <div class="swiper-slide">
-                    <img src="./assets/images/sliderImg.png" alt="logo" />
-                    <h3>Акція "-40% на пробне заняття з кінезітерапії"</h3>
-                    <p>
-                      Маєте чудову нагоду потурбуватись про власне здоров’я за вигідною пропозицією
-                      вартістю 680 408 грн.
-                    </p>
-                    <a href="#">Дізнатись більше></a>
+                    <a href="#">Переглянути детальніше</a>
                   </div>
                 </div>
-                <div class="swiper-button-next"></div>
-                <div class="swiper-button-prev"></div>
+                <div class="swiper-slide">
+                  <img src="./assets/images/sliderImg.png" alt="logo" />
+                  <div class="slider-text">
+                    <h3 class="slider-title">Акція "-40% на пробне заняття з кінезітерапії"</h3>
+                    <p>
+                      Маєте чудову нагоду потурбуватись про власне здоров’я за вигідною пропозицією
+                      вартістю 680 408 грн.
+                    </p>
+                    <a href="#">Переглянути детальніше</a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./assets/images/sliderImg.png" alt="logo" />
+                  <div class="slider-text">
+                    <h3 class="slider-title">Акція "-40% на пробне заняття з кінезітерапії"</h3>
+                    <p>
+                      Маєте чудову нагоду потурбуватись про власне здоров’я за вигідною пропозицією
+                      вартістю 680 408 грн.
+                    </p>
+                    <a href="#">Переглянути детальніше</a>
+                  </div>
+                </div>
+                <div class="swiper-slide">
+                  <img src="./assets/images/sliderImg.png" alt="logo" />
+                  <div class="slider-text">
+                    <h3 class="slider-title">Акція "-40% на пробне заняття з кінезітерапії"</h3>
+                    <p>
+                      Маєте чудову нагоду потурбуватись про власне здоров’я за вигідною пропозицією
+                      вартістю 680 408 грн.
+                    </p>
+                    <a href="#">Переглянути детальніше</a>
+                  </div>
+                </div>
               </div>
+              <div class="swiper-button-next"></div>
+              <div class="swiper-button-prev"></div>
             </div>
+
             <div class="form-container">
               <h1>Czekamy na Ciebie!</h1>
               <form id="contactForm">
@@ -326,11 +351,251 @@
           </div>
         </div>
       </section>
+      <section class="price-section">
+        <div class="container">
+          <h2 class="section-title price-title">ПРАЙС-ЛИСТ</h2>
+          <div class="price-block">
+            <div class="price-header">
+              <p>Kod</p>
+              <p>Konsultacje</p>
+              <p>Cena brutto</p>
+            </div>
+            <ul class="price-list">
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Telekonsultacja anestezjologiczna</p>
+                <p class="price-value">190 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+            </ul>
+            <div class="price-header">
+              <p>Kod</p>
+              <p>Badania</p>
+              <p>Cena brutto</p>
+            </div>
+            <ul class="price-list">
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Telekonsultacja anestezjologiczna</p>
+                <p class="price-value">190 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+            </ul>
+            <div class="price-header">
+              <p>Kod</p>
+              <p>Konsultacje</p>
+              <p>Cena brutto</p>
+            </div>
+            <ul class="price-list">
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Telekonsultacja anestezjologiczna</p>
+                <p class="price-value">190 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+            </ul>
+            <div class="price-header">
+              <p>Kod</p>
+              <p>Konsultacje</p>
+              <p>Cena brutto</p>
+            </div>
+            <ul class="price-list">
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Telekonsultacja anestezjologiczna</p>
+                <p class="price-value">190 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+            </ul>
+            <div class="price-header">
+              <p>Kod</p>
+              <p>Konsultacje</p>
+              <p>Cena brutto</p>
+            </div>
+            <ul class="price-list">
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Telekonsultacja anestezjologiczna</p>
+                <p class="price-value">190 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+            </ul>
+            <div class="price-header">
+              <p>Kod</p>
+              <p>Konsultacje</p>
+              <p>Cena brutto</p>
+            </div>
+            <ul class="price-list">
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Telekonsultacja anestezjologiczna</p>
+                <p class="price-value">190 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+            </ul>
+            <div class="price-header">
+              <p>Kod</p>
+              <p>Konsultacje</p>
+              <p>Cena brutto</p>
+            </div>
+            <ul class="price-list">
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Telekonsultacja anestezjologiczna</p>
+                <p class="price-value">190 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+            </ul>
+            <div class="price-header">
+              <p>Kod</p>
+              <p>Konsultacje</p>
+              <p>Cena brutto</p>
+            </div>
+            <ul class="price-list">
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Telekonsultacja anestezjologiczna</p>
+                <p class="price-value">190 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+              <li class="price-item">
+                <p class="price">89.000</p>
+                <p>Konsultacja anestezjologiczna</p>
+                <p class="price-value">280 zł </p>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </section>
+      <section class="title-section">
+        <div class="container">
+          <div class="title-content">
+            <h2>Twój</h2>
+            <h2>kompleksowy przegląd</h2>
+            <h2>stanu zdrowia</h2>
+          </div>
+        </div>
+      </section>
     </main>
     <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
       var swiper = new Swiper('.mySwiper', {
+        grabcursor: true,
+        slidesPerView: 1,
+        spaceBetween: 10,
+        loop: true,
+        pagination: {
+          el: '.swiper-pagination',
+          clickable: true,
+        },
         navigation: {
           nextEl: '.swiper-button-next',
           prevEl: '.swiper-button-prev',
