add contact section

--- a/index.html
+++ b/index.html
@@ -581,6 +581,54 @@
             <h2>kompleksowy przegląd</h2>
             <h2>stanu zdrowia</h2>
           </div>
+          <div class="contact-block">
+            <div class="contact-info">
+              <p>W razie jakichkolwiek pytań, zadzwoń</p>
+              <p>+48 00 000 00 00</p>
+              <p>Pon. - Pt.: 07:00-20:00</p>
+            </div>
+            <div class="contact-adress">
+              <p>Nasz adres</p>
+              <p>Lorem, <hr/><span>01-005 Warszawa</span> </p>
+              <div class="icon-map">
+                <img src="./assets/images/map.png" alt="logo" class="logo" />
+              </div>
+            </div>
+            <div class="contact-email">
+              <p>Nasz adres e-mail</p>
+              <p>info@lorem.center</p>
+              <ul class="contact-list">
+                <li>
+                  <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="instagram">
+                    <svg width="15" height="17" class="contact-icon">
+                      <use href="./assets/icons/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="facebook">
+                    <svg width="15" height="17" class="contact-icon">
+                      <use href="./assets/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="linkedin">
+                    <svg width="15" height="17" class="contact-icon">
+                      <use href="./assets/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="linkedin">
+                    <svg width="15" height="17" class="contact-icon">
+                      <use href="./assets/icons/icons.svg#icon-youtube"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+            </div>
+          </div>
         </div>
       </section>
     </main>
