--- a/index.html
+++ b/index.html
@@ -591,7 +591,7 @@
               <p>Nasz adres</p>
               <p>Lorem, <hr/><span>01-005 Warszawa</span> </p>
               <div class="icon-map">
-                <img src="./assets/images/map.png" alt="logo" class="logo" />
+                <img src="./assets/images/map.png" alt="map" />
               </div>
             </div>
             <div class="contact-email">
@@ -631,7 +631,93 @@
           </div>
         </div>
       </section>
+      
     </main>
+    <footer>
+      <div class="container">
+        <div class="footer-content">
+          <div class="footer-block__first">
+          <p>Jakiekolwiek wykorzystanie lub kopiowanie wybranych materiałów ze strony jest dozwolone tylko za zgodą właściciela praw autorskich i tylko z powołaniem się na źródło.</p>
+          <div class="footer-img">
+            <img src="./assets/images/visa1.png" alt="map" />
+            <img src="./assets/images/visa2.png" alt="map" />
+          </div>
+        </div>
+        <div class="footer-block__second">
+          <ul>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">O nas</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">Usługi</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">Blog</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">Praca</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">Cennik</a>
+            </li>
+          </ul>
+          <div class="footer-second__links">
+            <a href="#" target="_blank" rel="noreferrer nofollow">Lokalizacja</a>
+            <a href="#" target="_blank" rel="noreferrer nofollow">Skontaktuj się z nami</a>
+          </div>
+          <ul class="footer-list">
+                <li>
+                  <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="instagram">
+                    <svg width="15" height="17" class="contact-icon footer">
+                      <use href="./assets/icons/icons.svg#icon-instagram"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="facebook">
+                    <svg width="15" height="17" class="contact-icon footer facebook">
+                      <use href="./assets/icons/icons.svg#icon-facebook"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="linkedin">
+                    <svg width="15" height="17" class="contact-icon footer">
+                      <use href="./assets/icons/icons.svg#icon-linkedin"></use>
+                    </svg>
+                  </a>
+                </li>
+                <li>
+                  <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="linkedin">
+                    <svg width="15" height="17" class="contact-icon footer">
+                      <use href="./assets/icons/icons.svg#icon-youtube"></use>
+                    </svg>
+                  </a>
+                </li>
+              </ul>
+
+        </div>
+        <ul class="footer-block__third">
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">POLITYKA PRYWATNOŚCI</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">REGULAMIN</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">PRZYGOTOWANIE DO BADAŃ</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">INFORMACJA O PRAWACH PACJENTA</a>
+            </li>
+            <li>
+              <a href="#" target="_blank" rel="noreferrer nofollow">POLITYKA COOKIE</a>
+            </li>
+          </ul>
+        </div>
+
+      </div>
+    </footer>
     <script src="./index.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
     <script>
