footer styles well done

--- a/index.html
+++ b/index.html
@@ -636,6 +636,7 @@
     <footer>
       <div class="container">
         <div class="footer-content">
+        <div class="block-wrapper">
           <div class="footer-block__first">
           <p>Jakiekolwiek wykorzystanie lub kopiowanie wybranych materiałów ze strony jest dozwolone tylko za zgodą właściciela praw autorskich i tylko z powołaniem się na źródło.</p>
           <div class="footer-img">
@@ -694,8 +695,8 @@
                     </svg>
                   </a>
                 </li>
-              </ul>
-
+          </ul>
+        </div>
         </div>
         <ul class="footer-block__third">
             <li>
@@ -713,7 +714,7 @@
             <li>
               <a href="#" target="_blank" rel="noreferrer nofollow">POLITYKA COOKIE</a>
             </li>
-          </ul>
+        </ul>
         </div>
 
       </div>
