fix styles & add icon telegram

--- a/index.html
+++ b/index.html
@@ -589,7 +589,15 @@
             </div>
             <div class="contact-adress">
               <p>Nasz adres</p>
-              <p>Lorem, <hr/><span>01-005 Warszawa</span> </p>
+              <p >Lorem, <hr/><span class="map-block">01-005 Warszawa
+                <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="telegram">
+                <svg width="15" height="17" class="contact-icon telegram">
+                  <use href="./assets/icons/icons.svg#icon-telegram"></use>
+                </svg>
+              </a>
+              </span>
+                
+              </p>
               <div class="icon-map">
                 <img src="./assets/images/map.png" alt="map" />
               </div>
@@ -640,8 +648,8 @@
           <div class="footer-block__first">
           <p>Jakiekolwiek wykorzystanie lub kopiowanie wybranych materiałów ze strony jest dozwolone tylko za zgodą właściciela praw autorskich i tylko z powołaniem się na źródło.</p>
           <div class="footer-img">
-            <img src="./assets/images/visa1.png" alt="map" />
-            <img src="./assets/images/visa2.png" alt="map" />
+            <img src="./assets/images/visa1.png" alt="visa card" />
+            <img src="./assets/images/visa2.png" alt="visa card" />
           </div>
         </div>
         <div class="footer-block__second">
