--- a/index.html
+++ b/index.html
@@ -219,7 +219,9 @@
                 відносяться до нашої роботи. Дякуємо за ваш вибір.
               </p>
             </div>
-            <img src="./assets/images/hero.png" alt="logo" class="hero-img" />
+            <div class="hero-img__block">
+              <img src="./assets/images/hero.png" alt="hero img" class="hero-img" />
+            </div>
           </div>
         </div>
       </section>
