--- a/index.html
+++ b/index.html
@@ -610,9 +610,9 @@
             </div>
             <div class="contact-adress">
               <p>Nasz adres</p>
-              <div>
-                Lorem,
-                <hr />
+              <div class="map-text">
+                <span>Lorem,</span>
+                <br />
                 <p class="map-block">
                   01-005 Warszawa
                   <a href="#" target="_blank" rel="noreferrer nofollow" aria-label="telegram">
