--- a/index.html
+++ b/index.html
@@ -116,9 +116,9 @@
                 </svg>
               </a>
               <div class="dropdown-menu">
-                <a href="#">Program1</a>
-                <a href="#">Program2</a>
-                <a href="#">Program3</a>
+                <a href="#">UA</a>
+                <a href="#">EN</a>
+                <a href="#">DE</a>
               </div>
             </div>
 
